--- a/docker/nginx.host.conf.example
+++ b/docker/nginx.host.conf.example
@@ -1,32 +1,31 @@
+# ============================================
+# 物理机 Nginx 参考配置
+# ============================================
+# 放到 /etc/nginx/sites-enabled/ 下
+# 将域名请求代理到 Docker 容器
+
 server {
     listen 80;
-    server_name _;
+    server_name opencode.example.com;
 
-    # 前端静态文件
-    root /usr/share/nginx/html;
-    index index.html;
-
-    # gzip 压缩
-    gzip on;
-    gzip_types text/plain text/css application/json application/javascript text/xml application/xml text/javascript image/svg+xml;
-    gzip_min_length 256;
-
-    # 静态资源缓存（带 hash 的文件长期缓存）
-    location /assets/ {
-        expires 1y;
-        add_header Cache-Control "public, immutable";
+    # 前端
+    location / {
+        proxy_pass http://127.0.0.1:3000;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
     }
 
-    # OpenCode API 反向代理
+    # API 反向代理
     location /api/ {
         proxy_pass http://127.0.0.1:4096/;
         proxy_http_version 1.1;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
 
-        # SSE 支持
+        # SSE
         proxy_set_header Connection '';
         proxy_buffering off;
         proxy_cache off;
@@ -35,19 +34,13 @@ server {
         proxy_send_timeout 86400s;
     }
 
-    # WebSocket 支持（PTY 终端）
+    # WebSocket（PTY 终端）
     location /api/pty/ {
         proxy_pass http://127.0.0.1:4096/pty/;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection "upgrade";
         proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
         proxy_read_timeout 86400s;
-    }
-
-    # SPA fallback - 所有未匹配的路由回退到 index.html
-    location / {
-        try_files $uri $uri/ /index.html;
     }
 }
