--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,8 +16,8 @@ services:
     container_name: opencode-webui
     restart: unless-stopped
     ports:
-      - "${FRONTEND_PORT:-3000}:3000"   # 前端
-      - "${API_PORT:-4096}:4096"        # opencode API
+      - "127.0.0.1:${FRONTEND_PORT:-3000}:3000"
+      - "127.0.0.1:${API_PORT:-4096}:4096"
     volumes:
       - ${WORKSPACE:-./workspace}:/workspace
       - opencode-data:/root/.local/share/opencode
