refactor: split into frontend + backend containers
- frontend: Caddy serving static files + reverse proxy to backend
- backend: Ubuntu 24.04 + opencode serve
- Removed single-container setup and entrypoint.sh
- Caddy handles /api/* and /ws/* proxy to backend:4096

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,22 +2,40 @@
 # OpenCode WebUI - Docker Compose
 # ============================================
 #
+# 架构:
+#   frontend (Caddy)  :3000 -> 静态文件 + 反代 /api 到 backend
+#   backend  (Ubuntu) :4096 -> opencode serve
+#
 # 使用方法:
 #   cp .env.example .env    # 填写 API Key
 #   docker compose up -d    # 启动
 #
-# 物理机 nginx 反向代理到容器暴露的端口即可
+# 物理机 nginx 只需反代 3000 端口
 
 services:
-  opencode:
+  # ---- 前端：静态文件 + 反向代理 ----
+  frontend:
     build:
       context: .
-      dockerfile: Dockerfile    # 完整版；换 Dockerfile.frontend 只部署前端
-    container_name: opencode-webui
+      dockerfile: docker/Dockerfile.frontend
+    container_name: opencode-frontend
     restart: unless-stopped
     ports:
       - "127.0.0.1:${FRONTEND_PORT:-3000}:3000"
-      - "127.0.0.1:${API_PORT:-4096}:4096"
+    depends_on:
+      backend:
+        condition: service_healthy
+
+  # ---- 后端：opencode serve ----
+  backend:
+    build:
+      context: .
+      dockerfile: docker/Dockerfile.backend
+    container_name: opencode-backend
+    restart: unless-stopped
+    # 不暴露到宿主机，只在 docker 网络内通信
+    expose:
+      - "4096"
     volumes:
       - ${WORKSPACE:-./workspace}:/workspace
       - opencode-data:/root/.local/share/opencode
@@ -33,6 +51,12 @@ services:
       - OPENCODE_SERVER_PASSWORD=${OPENCODE_SERVER_PASSWORD:-}
       - OPENCODE_SERVER_USERNAME=${OPENCODE_SERVER_USERNAME:-opencode}
       - WORKSPACE=/workspace
+    healthcheck:
+      test: ["CMD", "curl", "-sf", "http://127.0.0.1:4096/global/health"]
+      interval: 5s
+      timeout: 3s
+      retries: 10
+      start_period: 10s
 
 volumes:
   opencode-data:
