--- a/docker/Caddyfile
+++ b/docker/Caddyfile
@@ -1,25 +1,12 @@
 # OpenCode WebUI - Caddy 配置
-# 静态文件 + 反向代理 API 到后端容器
+# 纯静态文件服务
 
 :3000 {
-    # 静态文件
     root * /srv
     file_server
 
     # SPA 路由 - 所有非文件请求返回 index.html
     try_files {path} /index.html
 
-    # 压缩
     encode gzip
-
-    # API 反向代理到后端容器
-    # docker-compose 中服务名为 backend
-    handle /api/* {
-        reverse_proxy backend:4096
-    }
-
-    # WebSocket 支持 (opencode 需要)
-    handle /ws/* {
-        reverse_proxy backend:4096
-    }
 }
