--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "opencode-webui",
+  "name": "opencodeui",
   "version": "0.1.0",
   "description": "A third-party web frontend for OpenCode",
   "license": "GPL-3.0-only",
