--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -78,24 +78,12 @@ jobs:
           args: ${{ matrix.args }}
 
   # ============================================
-  # Android builds — per-architecture APKs
+  # Android builds — 单 job 顺序构建所有架构，避免并发上传冲突
   # ============================================
   publish-android:
     permissions:
       contents: write
     runs-on: ubuntu-latest
-    strategy:
-      fail-fast: false
-      matrix:
-        include:
-          - rust-target: aarch64-linux-android
-            tauri-target: aarch64
-            arch: arm64-v8a
-            label: arm64
-          - rust-target: armv7-linux-androideabi
-            tauri-target: armv7
-            arch: armeabi-v7a
-            label: armv7
     steps:
       - uses: actions/checkout@v4
 
@@ -119,13 +107,13 @@ jobs:
       - name: Install Rust stable
         uses: dtolnay/rust-toolchain@stable
         with:
-          targets: ${{ matrix.rust-target }}
+          targets: aarch64-linux-android,armv7-linux-androideabi
 
       - name: Rust cache
         uses: swatinem/rust-cache@v2
         with:
           workspaces: './src-tauri -> target'
-          key: android-${{ matrix.rust-target }}
+          key: android
 
       - name: Install frontend dependencies
         run: npm ci
@@ -138,50 +126,59 @@ jobs:
           base64 -d <<< "${{ secrets.ANDROID_KEY_BASE64 }}" > $RUNNER_TEMP/keystore.jks
           echo "storeFile=$RUNNER_TEMP/keystore.jks" >> keystore.properties
 
-      - name: Build Android APK
-        run: npx tauri android build --apk --target ${{ matrix.tauri-target }}
+      - name: Build Android APKs
+        run: |
+          npx tauri android build --apk --target aarch64
+          npx tauri android build --apk --target armv7
         env:
           NDK_HOME: ${{ env.ANDROID_HOME }}/ndk/29.0.14206865
 
-      - name: Sign and rename APK
-        id: apk
+      - name: Sign and rename APKs
         run: |
           VERSION=${{ github.ref_name }}
-          DEST="OpenCodeUI-${VERSION}-android-${{ matrix.label }}.apk"
+          BT="$ANDROID_HOME/build-tools/$(ls $ANDROID_HOME/build-tools/ | tail -1)"
 
-          # 找到 release APK（优先 signed，回退 unsigned）
-          SIGNED_APK=$(find src-tauri/gen/android/app/build/outputs/apk -path '*/release/*-signed*' -name '*.apk' -type f 2>/dev/null | head -1)
-          RELEASE_APK=$(find src-tauri/gen/android/app/build/outputs/apk -path '*/release/*.apk' -name '*.apk' -type f 2>/dev/null | head -1)
-          APK_PATH="${SIGNED_APK:-$RELEASE_APK}"
+          sign_apk() {
+            local label=$1
+            local dest="OpenCodeUI-${VERSION}-android-${label}.apk"
 
-          echo "Found APK: $APK_PATH"
+            SIGNED_APK=$(find src-tauri/gen/android/app/build/outputs/apk -path '*/release/*-signed*' -name '*.apk' -type f 2>/dev/null | head -1)
+            RELEASE_APK=$(find src-tauri/gen/android/app/build/outputs/apk -path '*/release/*.apk' -name '*.apk' -type f 2>/dev/null | head -1)
+            APK_PATH="${SIGNED_APK:-$RELEASE_APK}"
 
-          # 检查是否已签名
-          if $ANDROID_HOME/build-tools/$(ls $ANDROID_HOME/build-tools/ | tail -1)/apksigner verify "$APK_PATH" 2>/dev/null; then
-            echo "APK is already signed"
-            cp "$APK_PATH" "$DEST"
-          else
-            echo "APK is unsigned, signing manually..."
-            # zipalign
-            $ANDROID_HOME/build-tools/$(ls $ANDROID_HOME/build-tools/ | tail -1)/zipalign -v 4 "$APK_PATH" "${APK_PATH}.aligned"
-            # sign
-            $ANDROID_HOME/build-tools/$(ls $ANDROID_HOME/build-tools/ | tail -1)/apksigner sign \
-              --ks $RUNNER_TEMP/keystore.jks \
-              --ks-key-alias ${{ secrets.ANDROID_KEY_ALIAS }} \
-              --ks-pass pass:${{ secrets.ANDROID_KEY_PASSWORD }} \
-              --key-pass pass:${{ secrets.ANDROID_KEY_PASSWORD }} \
-              --out "$DEST" \
-              "${APK_PATH}.aligned"
-          fi
+            echo "[$label] Found APK: $APK_PATH"
 
-          echo "path=$DEST" >> $GITHUB_OUTPUT
-          ls -lh "$DEST"
+            if $BT/apksigner verify "$APK_PATH" 2>/dev/null; then
+              echo "[$label] APK is already signed"
+              cp "$APK_PATH" "$dest"
+            else
+              echo "[$label] Signing manually..."
+              $BT/zipalign -v 4 "$APK_PATH" "${APK_PATH}.aligned"
+              $BT/apksigner sign \
+                --ks $RUNNER_TEMP/keystore.jks \
+                --ks-key-alias ${{ secrets.ANDROID_KEY_ALIAS }} \
+                --ks-pass pass:${{ secrets.ANDROID_KEY_PASSWORD }} \
+                --key-pass pass:${{ secrets.ANDROID_KEY_PASSWORD }} \
+                --out "$dest" \
+                "${APK_PATH}.aligned"
+            fi
 
-      - name: Upload APK to Release
+            ls -lh "$dest"
+
+            # 清理 build outputs 以免下一个架构找到旧文件
+            rm -rf src-tauri/gen/android/app/build/outputs/apk
+          }
+
+          sign_apk "arm64"
+          sign_apk "armv7"
+
+      - name: Upload APKs to Release
         uses: softprops/action-gh-release@v2
         with:
           tag_name: ${{ github.ref_name }}
-          files: ${{ steps.apk.outputs.path }}
+          files: |
+            OpenCodeUI-${{ github.ref_name }}-android-arm64.apk
+            OpenCodeUI-${{ github.ref_name }}-android-armv7.apk
           prerelease: ${{ contains(github.ref_name, 'canary') || contains(github.ref_name, 'alpha') || contains(github.ref_name, 'beta') }}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
