feat(docker): restore custom backend image with GHCR CI build
- restore Dockerfile.backend (our own build, more stable than official image)
- add GitHub Actions workflow for multi-arch backend image (amd64/arm64)
- schedule weekly rebuild to pick up latest opencode
- update docker-compose to use ghcr.io/lehhair/opencodeui-backend:latest

--- a/docker-compose.build.yml
+++ b/docker-compose.build.yml
@@ -9,3 +9,9 @@ services:
     build:
       context: .
       dockerfile: docker/Dockerfile.frontend
+
+  backend:
+    image: opencodeui-backend:local
+    build:
+      context: .
+      dockerfile: docker/Dockerfile.backend
